menu on small screen fix, modal window on small screen, button on storage and nav

--- a/cabinet/new-farmer/template/css/newstyle.css
+++ b/cabinet/new-farmer/template/css/newstyle.css
@@ -107,6 +107,7 @@ a:hover, a:active, a:focus {
 
 .navibar-navn > .user-menun > .dropdown-menun > .user-footern {
     padding: 10px;
+    margin-bottom: 35px;
 }
 
 .navibar-navn > .user-menun > .dropdown-menun > .user-bodyn {
@@ -559,9 +560,9 @@ form{
 }
 
 .dropdown-menun .fa{
-
     margin-left: 5px;
-    padding-right: 5px !important;
+    padding-right: 0px;
+    margin-right: -8px;
 }
 
 .right{
@@ -838,6 +839,21 @@ fieldset[disabled] a.btnn {
         font-weight: 300;
         text-transform: uppercase;
     }
+    .col-lg-3 {
+    width: 50% !important;
+    float: left;
+}
+    .non-semantic-protector{
+    width: 75%;
+    margin: auto;
+    margin-top: -25px!important;
+    }
+    .table-responsive>.table>thead>tr>th, .table-responsive>.table>tbody>tr>th, .table-responsive>.table>tfoot>tr>th, .table-responsive>.table>thead>tr>td, .table-responsive>.table>tbody>tr>td, .table-responsive>.table>tfoot>tr>td {
+    white-space: normal;
+}
+    .nav-tabs>li {
+    width: 33.33%;
+}
 }
 
 @media (max-width: 1200px) {
@@ -1136,6 +1152,10 @@ padding-left: 15px;
     width: 33.33333333%;
 }
 
+.col-lg-4{
+    position: inherit;
+}
+
 .text-centern {
     text-align: center;
 }
@@ -1263,6 +1283,11 @@ padding-left: 15px;
     .navibar-static-top {
         z-index: 1000;
         border-width: 0 0 1px;
+    }
+    .modal-dialog {
+        min-width: 700px;
+        max-width: 900px;
+        margin: 20px auto;
     }
 }
 
@@ -2000,7 +2025,7 @@ padding-left: 15px;
 }
 
 .fa-line-chart{
-     margin-right: -5px;
+     margin-right: -10px !important;
  }
 
 .dropdown-menu>li>a, .dropdown-menun2 > li > a, .navibar-navn li a, .dropdown-menun>li>a,
@@ -2086,8 +2111,38 @@ padding-left: 15px;
     color: #6f6f6f !important;
 }
 .navibar-custom-menun .navibar-navn > li > .dropdown-menun>li>a>.menu-icon {
-    padding-right: 15px !important;
+    padding-right: 20px !important;
 }
 .user-footern>div>a{
     color: #fffefe !important;
+}
+.searchs{
+position: absolute;
+}
+@media (max-width: 480px){
+.col-lg-3 {
+    width: 100% !important;
+    float: left;
+}
+}
+@media (max-width: 640px){
+.navibar-navn > li > a, .dropdown-menun>li>a, .dropdown-menun2 > li > a {
+    font-size: 14px!important;
+}
+    .dropdown-menun{
+    left: -105%;
+    }
+    .dropdown-menun2{
+    left: -57%;
+    width: 100px;
+    }
+}
+@media (max-width: 580px){
+     .dropdown-menun2{
+    right: 100%;
+    width: 100px;
+    }
+    .dropdown-menun{
+    left: -158%;
+    }
 }
